# structsiren

./: .gitignore  CITATION.cff  README.rst  setup.cfg
scripts/: 3dshapes_codes_to_factors.py  3dshapes_collect_codes.py  3dshapes_measure_disentanglement.py  3dshapes_plot_shapes.py  3dshapes_prepare_data.py  3dshapes_train.py
structsiren/datasets/: __init__.py
structsiren/datasets/shapes3d/: __init__.py  datasets.py  define.py  utils.py
structsiren/models/: __init__.py  decoder.py  encoder.py  sae.py  siren.py  utils.py
