[metadata]
name = structsiren
author = 
    Stephan Huber
maintainer =
    Stephan Huber
maintainer-email = huberstephan2@gmail.com
home-page = TODO
description = "Disentanglement with Structured Siren Autoencoders"
long-description = file: README.rst, CHANGELOG.rst
keywords = disentanglement, autoencoder, siren, deep learning
license = LICENSE
platform = any
classifiers = 
    Development Status :: 4 - Beta
    License :: Stephan Huber
    Operation System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = structsiren
python_requires = >=3.6, <3.9
install_requires =
    disentanglement-lib
    h5py
    matplotlib
    numpy
    pandas
    pytorch_fid
    tensorboard
    tensorflow
    torch
    tqdm
setup_requires =
    setuptools_scm

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issue/513
    __init__.py F401 F403  # ignore ununsed and * imports
